--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,215 @@
-// structure
-:root{
+/* adding height to container can  */
 
+:root{
+    /* --light-blue-color: #469fe4 ; */
+    --universal-color: #469fe4 ;
+    --color-1 : #3f51b5 ;
+    --color-2 : #9c27b0 ;
 }
+
 *{
     margin: 0%;
     padding: 0%;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     box-sizing: border-box;
+    min-height: 200vh;
 }
+/* start part 1 */
+.show{
+    opacity: 1;
+}
+.hide{
+    opacity: 0;
+}
+#go-up{
+    position: fixed;
+    right: 2%;
+    bottom: 2%;
+    width: 25px;
+    height: 25px;
+    z-index: 1;
+    background-color: #dad8d8 ;
+    border-radius: 50%;
+    transition: 0.5s;
+    cursor: pointer;
+    /* scroll-behavior: smooth; don't work ? */
+}
+.go-up i{
+    width: 50px;
+    height: 50px;
+}
+.between-flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.pad-lr{
+    padding: 0px  80px;
+}
+.all-white{
+    background-color: #fff;
+    color: #fff;
+}
+.mini-nav{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 20;
+    width: 90%;
+    background-color: #eee;
+    color: #777;
+    height: 25px;
+}
+.mini-nav .contact-nav,
+.nav-bar .links ul{
+    display: flex;
+    align-items: center;
+}
+.mini-nav .contact-nav{
+    height: 100%;
+    overflow: hidden;
+}
+@media (max-width: 767px) {
+    .mini-nav .contact-nav{
+        display: none;
+    }
+    .mini-nav {
+        justify-content: space-around;
+        padding: 0px;
+        width: 100%;
+    }
+}
+.mini-nav .contact-nav i,
+.mini-nav .contact-nav p{
+    padding: 0px 10px;
+    height: 100%;
+    border-right: 1px solid #999;
+}
+.mini-nav .contact-nav i{
+    padding-top: 10px;
+}
+.mini-nav div i.facebook:hover{
+    color: #fff;
+    background: #1877f2 ;
+}
+.mini-nav div i.instagram:hover{
+    color: #fff;
+    background: #405de6 ;
+}
+.mini-nav div i.twitter:hover{
+    color: #fff;
+    background: #1da1f2 ;
+}
+.mini-nav div i.tumblr:hover{
+    color: #fff;
+    background: #35465c ;
+}
+
+.nav-bar{
+    background: #fff;
+    /* height: auto;  fit the content */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    z-index: 20;
+    width: 90%;
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media (max-width: 767px) {
+    .nav-bar .links{
+        display: none;
+    }
+    .nav-bar{
+        justify-content: space-around;
+        padding: 10px 0px;
+        width: 100%;
+    }
+}
+.nav-bar .links ul a{
+    text-decoration: none;
+    color: #999;
+    font-weight: 30px;
+}
+.nav-bar .links ul a:hover{
+    color: var(--universal-color);
+}
+.nav-bar .links ul li{
+    list-style: none;
+    padding: 0px 10px;
+}
+.nav-bar img{
+    width: 200px;
+}
+
+.header-1{
+    min-height: 50vh;
+    position: relative;
+    background-position: fixed;
+    background-image: url("../imgs/medic-1.jpg");
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header-1 img{
+    width: 100%;
+    height: 100%;
+}
+
+.header-1::before{
+    position: absolute ;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgb(70 159 228 / 60%) ;
+    content: "";
+}
+.header-1 .header-1-info{
+    color: #fff;
+    text-align: center;
+    z-index: 5;
+}
+.header-1 .header-1-info h2{
+    font-size: 75px;
+    margin-bottom: 25px;
+}
+.header-1 .header-1-info p{
+    font-size: 30px;
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+.header-1 .header-btn{
+    outline: none;
+    border: 1px solid #fff;
+    background-color: transparent;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-left: 5px;
+    font-weight: bold;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.header-1 #btn-1-header{
+    color: #000;
+    background: #fff;
+}
+.header-1 #btn-1-header:hover{
+    opacity: 0.7;
+}
+.header-1 #btn-2-header{
+    color: #fff;
+}
+.header-1 #btn-2-header:hover{
+    color: #000 ;
+    background-color: #fff;
+}
+/* end part 1 */
